# QML_Client-Server

./: README.md  build.sh  dependencies.sh  dockerfile
app/: Application.cpp  Application.h  CMakeLists.txt  TimerController.cpp  TimerController.h  USBHelper.cpp  USBHelper.h  WebClient.cpp  WebClient.h  main.cpp
server/: server.py  server_test.py
server/qml_files/: main.qml
